# tracker_compare_ee432

./: .gitignore  CMakeLists.txt  README.md  package.xml  tracker.m
data/drink/: KCF.csv  MEDIANFLOW.csv  MIL.csv  TLD.csv
data/drink_pi/: BOOSTING.csv
data/hallway1/: BOOSTING.csv  KCF.csv  MEDIANFLOW.csv  MIL.csv  TLD.csv
data/hallway2/: BOOSTING.csv  KCF.csv  MEDIANFLOW.csv  MIL.csv  TLD.csv
data/head_move/: BOOSTING.csv  KCF.csv  MEDIANFLOW.csv  MIL.csv  TLD.csv
data/helmet_shades/: BOOSTING.csv  KCF.csv  MEDIANFLOW.csv  MIL.csv  TLD.csv
data/leave/: BOOSTING.csv  KCF.csv  MEDIANFLOW.csv  MIL.csv  TLD.csv
data/outside1/: BOOSTING.csv  KCF.csv  MEDIANFLOW.csv  MIL.csv  TLD.csv
data/outside2/: BOOSTING.csv  KCF.csv  MEDIANFLOW.csv  MIL.csv  TLD.csv
data/spin/: BOOSTING.csv  KCF.csv  MEDIANFLOW.csv  MIL.csv  TLD.csv
data/tech/: BOOSTING.csv  KCF.csv  MEDIANFLOW.csv  MIL.csv  TLD.csv
data/turn/: BOOSTING.csv  KCF.csv  MEDIANFLOW.csv  MIL.csv  TLD.csv
launch/: start_cam.launch
src/: track_obj.py  tracker_data.py  turn_control.py
