<?xml version="1.0"?>
<package format="2">
  <name>tracker</name>
  <version>0.0.0</version>
  <description>The tracker package</description>

  <maintainer email="aamirhatim@gmail.com">aamirhatim</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
